--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_auth: ^0.18.0+1
   shared_preferences: ^0.5.10
+  photo_view: ^0.10.2
+  google_maps_flutter: ^0.4.0
+  cached_network_image: ^2.3.3
 
 dev_dependencies:
   flutter_test:
